--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,26 +5,29 @@ plugins {
 }
 
 android {
-    compileSdk rootProject.ext.compileSdk
-    compileSdkVersion rootProject.ext.compileSdk
+    compileSdk 33
+    namespace "com.google.ar.sceneform"
 
     defaultConfig {
         // Sceneform requires minSdk >= 24.
-        minSdk rootProject.ext.minSdk
-        targetSdk rootProject.ext.targetSdk
+        minSdk 24
+        targetSdk 33
 
         consumerProguardFiles 'lib-proguard-rules.pro'
 
         buildConfigField 'String', 'VERSION_NAME', "\"${project.properties['VERSION_NAME']}\""
     }
+    buildFeatures {
+        buildConfig true
+    }
     compileOptions {
         // Sceneform libraries use language constructs from Java 8.
         // Add these compile options if targeting minSdk < 26.
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8.toString()
+        jvmTarget = "17"
     }
     buildTypes {
         release {
@@ -42,27 +45,25 @@ dependencies {
     implementation files("libs/libsceneform_runtime_schemas.jar")
 
     // Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_coroutines_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinx_coroutines_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:$kotlinx_coroutines_version"
+    implementation(platform("org.jetbrains.kotlinx:kotlinx-coroutines-bom:1.7.1"))
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-jdk8")
 
     // Filament
-    api "com.google.android.filament:filament-android:$filament_version"
-    api "com.google.android.filament:gltfio-android:$filament_version"
-    api "com.google.android.filament:filament-utils-android:$filament_version"
+    api "com.google.android.filament:filament-android:1.21.1"
+    api "com.google.android.filament:gltfio-android:1.21.1"
+    api "com.google.android.filament:filament-utils-android:1.21.1"
 
     // ARCore
-    api "com.google.ar:core:$arcore_version"
+    api "com.google.ar:core:1.31.0"
 
     // AndroidX
-    implementation "androidx.annotation:annotation:$annotation_version"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_runtime_ktx_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
 
     // Fuel
-    implementation "com.github.kittinunf.fuel:fuel:$fuel_version"
-    implementation "com.github.kittinunf.fuel:fuel-android:$fuel_version"
-    implementation "com.github.kittinunf.fuel:fuel-coroutines:$fuel_version"
+    implementation "com.github.kittinunf.fuel:fuel:2.3.1"
+    implementation "com.github.kittinunf.fuel:fuel-android:2.3.1"
+    implementation "com.github.kittinunf.fuel:fuel-coroutines:2.3.1"
 }
 
 //mavenPublish {
