--- a/sceneform/build.gradle
+++ b/sceneform/build.gradle
@@ -5,22 +5,25 @@ plugins {
 }
 
 android {
-    compileSdk rootProject.ext.compileSdk
-    compileSdkVersion rootProject.ext.compileSdk
+    compileSdk 33
+    namespace "com.google.ar.sceneform.sceneform"
 
     defaultConfig {
         // Sceneform requires minSdk >= 24.
-        minSdk rootProject.ext.minSdk
-        targetSdk rootProject.ext.targetSdk
+        minSdk 24
+        targetSdk 33
     }
     compileOptions {
         // Sceneform libraries use language constructs from Java 8.
         // Add these compile options if targeting minSdk < 26.
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    buildFeatures {
+        buildConfig true
     }
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8.toString()
+        jvmTarget = "17"
     }
     buildTypes {
         release {
@@ -34,7 +37,6 @@ android {
 }
 
 dependencies {
-    api project(":core")
     api project(":ux")
 }
 
