--- a/sceneform/src/main/AndroidManifest.xml
+++ b/sceneform/src/main/AndroidManifest.xml
@@ -15,6 +15,5 @@
    limitations under the License.
 -->
 <manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.google.ar.sceneform.sceneform">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 </manifest>
