--- a/ux/build.gradle
+++ b/ux/build.gradle
@@ -5,22 +5,25 @@ plugins {
 }
 
 android {
-    compileSdk rootProject.ext.compileSdk
-    compileSdkVersion rootProject.ext.compileSdk
+    compileSdk 33
+    namespace "com.google.ar.sceneform.ux"
 
     defaultConfig {
         // Sceneform requires minSdk >= 24.
-        minSdk rootProject.ext.minSdk
-        targetSdk rootProject.ext.targetSdk
+        minSdk 24
+        targetSdk 33
     }
     compileOptions {
         // Sceneform libraries use language constructs from Java 8.
         // Add these compile options if targeting minSdk < 26.
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8.toString()
+        jvmTarget = "17"
+    }
+    buildFeatures {
+        buildConfig true
     }
     buildTypes {
         release {
@@ -37,13 +40,11 @@ dependencies {
     api project(":core")
 
     // Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_coroutines_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinx_coroutines_version"
+    implementation(platform("org.jetbrains.kotlinx:kotlinx-coroutines-bom:1.7.1"))
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android")
 
     // AndroidX
-    implementation "androidx.annotation:annotation:$annotation_version"
-    implementation "androidx.appcompat:appcompat:$appcompat_version"
+    implementation "androidx.appcompat:appcompat:1.6.1"
 }
 
 //mavenPublish {
